<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:orientation="vertical"
    android:background="@color/appLevel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appName"
            style="@style/aboutTextStyle"
            android:textStyle="bold"
            android:textSize="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/version"
            style="@style/aboutTextStyle"
            android:textStyle=""
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"/>

        <TextView
            android:id="@+id/appAbout"
            style="@style/aboutTextStyle"
            android:textStyle="italic"
            android:textSize="12dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shortDetails"/>


        <TextView
            android:textStyle="bold"
            android:text="@string/projectType"
            android:layout_marginTop="16dp"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/project_info"
            android:layout_marginTop="0dp"
            style="@style/aboutTextStyle"
            android:text="@string/projectTypeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            style="@style/aboutTextStyle"
            android:text="@string/projectSuperVisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/supervisor_details"
            android:layout_marginTop="0dp"
            style="@style/aboutTextStyle"
            android:text="@string/projectSuperName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/developersDetailsLabel"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/first_developer"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            style="@style/aboutTextStyle"
            android:text="@string/firstDeveloperDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView

            android:id="@+id/second_developer"
            android:layout_marginTop="10dp"
            android:text="@string/secondDeveloperDetails"
            style="@style/aboutTextStyle"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView

            android:id="@+id/third_developer"
            android:layout_marginTop="10dp"
            android:text="@string/thirdDeveloperDetails"
            style="@style/aboutTextStyle"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>

